2008-05-07  Sam Steingold  <sds@gnu.org>

	* makemake.in (MYIMPROOT): use beta pages for the latest id-href.map
	(check-doc): use base, not boot, for better symbol coverage

2008-05-07  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object@symbol) [FFI]:
	print foreign type information

2008-05-07  Sam Steingold  <sds@gnu.org>

	* makemake.in (encflags): ' -E UTF-8 -Epathname 1:1':
	UTF-8 for files, terminal, wildcard test
	1:1 for pathname

2008-05-07  Reini Urban  <rurban@x-ray.at>

	* modules/syscalls/calls.c (FMTID_SummaryInformation)
	(FMTID_UserDefinedProperties): enable also on UNIX_CYGWIN32

2008-05-07  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1959436 ]: Allow ending http_proxy with a slash
	* clhs.lisp (http-proxy): handle the trailing slash

2008-05-07  Reini Urban  <rurban@x-ray.at>

	* modules/syscalls/calls.c (FILE_FUNCTION, CLEARERR): fix g++ and
	cygwin compilation by casting the pointers to (FILE*)

2008-05-06  Bruno Haible  <bruno@clisp.org>

	* clos-specializer2.lisp (reinitialize-instance@specializer): Change
	error message.

2008-05-06  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (FFLUSH): add
	* modules/syscalls/posix.lisp (fflush): export
	(FILENO, FEOF, FERROR, FCLOSE): check return values

2008-05-06  Sam Steingold  <sds@gnu.org>

	* clos-class3.lisp, clos-genfun3.lisp, clos-methcomb2.lisp,
	* describe.lisp, foreign1.lisp, reploop.lisp:
	various small i18n message fixes

2008-05-05  Sam Steingold  <sds@gnu.org>

	* clos-genfun3.lisp (analyze-defgeneric): do not pass through
	gettext messages which contain no text, just format directives
	* clos-method2.lisp (program-error-reporter)
	(analyze-method-description): ditto

2008-05-05  Sam Steingold  <sds@gnu.org>

	* format.lisp (format-not-both-error): replaces format-conditional-error
	(format-parse-cs, format-conditional, formatter-main-1): use it

2008-05-05  Sam Steingold  <sds@gnu.org>

	* clos-slotdef1.lisp, compiler.lisp, lambdalist.lisp, trace.lisp: