@@ -160,52 +160,52 @@ build-linux-x86-standard-spvw_mixed_blocks-staggered:
 	rm -rf $@
 	CFLAGS="-O -falign-functions=4 $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DSTANDARD_HEAPCODES -DCONS_HEAP_GROWS_UP" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-linux-x86-standard-spvw_mixed_blocks-opposite:
 	rm -rf $@
 	CFLAGS="-O -falign-functions=4 $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DSTANDARD_HEAPCODES -DCONS_HEAP_GROWS_DOWN" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-linux-x86-standard-spvw_mixed_blocks-opposite-fixedmemsize:
 	rm -rf $@
 	CFLAGS="-O -falign-functions=4 $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DSTANDARD_HEAPCODES -DNO_VIRTUAL_MEMORY -DNO_TRIVIALMAP" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-linux-x86-standard-spvw_mixed_pages:
 	rm -rf $@
 	CFLAGS="-O -falign-functions=4 $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DSTANDARD_HEAPCODES -DNO_SINGLEMAP -DNO_TRIVIALMAP -DNO_MULTIMAP_FILE -DNO_MULTIMAP_SHM" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-linux-x86-noexec-spvw_mixed_blocks-staggered:
 	rm -rf $@
 	CFLAGS="-O -falign-functions=4 $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DLINUX_NOEXEC_HEAPCODES -DCONS_HEAP_GROWS_UP" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-linux-x86-noexec-spvw_mixed_blocks-opposite:
 	rm -rf $@
 	CFLAGS="-O -falign-functions=4 $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DLINUX_NOEXEC_HEAPCODES -DCONS_HEAP_GROWS_DOWN" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-linux-x86-noexec-spvw_mixed_blocks-opposite-fixedmemsize:
 	rm -rf $@
 	CFLAGS="-O -falign-functions=4 $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DLINUX_NOEXEC_HEAPCODES -DNO_VIRTUAL_MEMORY -DNO_TRIVIALMAP" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-linux-x86-noexec-spvw_mixed_pages:
 	rm -rf $@
 	CFLAGS="-O -falign-functions=4 $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DLINUX_NOEXEC_HEAPCODES -DNO_SINGLEMAP -DNO_TRIVIALMAP -DNO_MULTIMAP_FILE -DNO_MULTIMAP_SHM" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-linux-x86-spvw_pure_blocks:
 	rm -rf $@
 	CFLAGS="-O -falign-functions=4 $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DTYPECODES" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-linux-x86-wide:
 	rm -rf $@
 	CFLAGS="-O -falign-functions=4 $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DWIDE" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 
 multibuild-darwin-powerpc: \
 	build-darwin-powerpc-standard-spvw_mixed_blocks-staggered	\
@@ -222,52 +222,52 @@ build-darwin-powerpc-standard-spvw_mixed_blocks-staggered:
 	rm -rf $@
 	CFLAGS="-O $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DSTANDARD_HEAPCODES -DCONS_HEAP_GROWS_UP" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-darwin-powerpc-standard-spvw_mixed_blocks-opposite:
 	rm -rf $@
 	CFLAGS="-O $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DSTANDARD_HEAPCODES -DCONS_HEAP_GROWS_DOWN" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-darwin-powerpc-standard-spvw_mixed_blocks-opposite-fixedmemsize:
 	rm -rf $@
 	CFLAGS="-O $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DSTANDARD_HEAPCODES -DNO_VIRTUAL_MEMORY -DNO_TRIVIALMAP" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-darwin-powerpc-standard-spvw_mixed_pages:
 	rm -rf $@
 	CFLAGS="-O $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DSTANDARD_HEAPCODES -DNO_SINGLEMAP -DNO_TRIVIALMAP -DNO_MULTIMAP_FILE -DNO_MULTIMAP_SHM" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-darwin-powerpc-noexec-spvw_mixed_blocks-staggered:
 	rm -rf $@
 	CFLAGS="-O $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DLINUX_NOEXEC_HEAPCODES -DCONS_HEAP_GROWS_UP" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-darwin-powerpc-noexec-spvw_mixed_blocks-opposite:
 	rm -rf $@
 	CFLAGS="-O $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DLINUX_NOEXEC_HEAPCODES -DCONS_HEAP_GROWS_DOWN" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-darwin-powerpc-noexec-spvw_mixed_blocks-opposite-fixedmemsize:
 	rm -rf $@
 	CFLAGS="-O $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DLINUX_NOEXEC_HEAPCODES -DNO_VIRTUAL_MEMORY -DNO_TRIVIALMAP" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-darwin-powerpc-noexec-spvw_mixed_pages:
 	rm -rf $@
 	CFLAGS="-O $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DLINUX_NOEXEC_HEAPCODES -DNO_SINGLEMAP -DNO_TRIVIALMAP -DNO_MULTIMAP_FILE -DNO_MULTIMAP_SHM" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-darwin-powerpc-spvw_pure_blocks:
 	rm -rf $@
 	CFLAGS="-O $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DTYPECODES" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 build-darwin-powerpc-wide:
 	rm -rf $@
 	CFLAGS="-O $(MULTIBUILD_CFLAGS)" \
 	CPPFLAGS="-DWIDE" \
-	  ./configure --build $(MULTIBUILD_OPTIONS) $@
+	  ./configure --cbc $(MULTIBUILD_OPTIONS) $@
 
 SRCDIRS=src utils benchmarks emacs modules sacla-tests tests
 TAGS : force
@@ -281,7 +281,7 @@ SBCL_VERSION = 0.8.15
 SBCL_SOURCE_FILE = sbcl-$(SBCL_VERSION)-source.tar.bz2
 SBCL_SOURCE_URL = http://www.haible.de/bruno/$(SBCL_SOURCE_FILE)
 check-sbcl:
-	./configure --build build-for-sbcl
+	./configure --cbc build-for-sbcl
 	test -f $(SBCL_SOURCE_FILE) || wget $(SBCL_SOURCE_URL)
 	rm -rf sbcl-$(SBCL_VERSION)
 	bunzip2 -c < $(SBCL_SOURCE_FILE) | tar xvf -
