@@ -108,7 +108,7 @@ help.
 
 It is recommended to build a separate Lisp containing the Oracle
 module in a build other than the default "src" subdirctory.  This is
-easily done by running CLISP's "configure" script with the --build
+easily done by running CLISP's "configure" script with the --cbc
 option, as well as the option to include the Oracle module.  The build
 will be done in a separate area from any other CLISP builds of the
 same source base.  The command I use is:
@@ -122,7 +122,7 @@ same source base.  The command I use is:
        --with-module=regexp                     \
        --with-module=bindings/glibc             \
        --with-module=oracle                     \
-       --build oralisp
+       --cbc oralisp
 
 If all goes well, this will build a complete Lisp in
         /path/to/clisp/oralisp/full
