@@ -1,3 +1,3 @@
 To install the pari-bindings, do the following:
 
-$ /configure --with-module=pari --with-libpari-prefix=/usr/local/ --build build-pari
+$ /configure --with-module=pari --with-libpari-prefix=/usr/local/ --cbc build-pari
